kuard/2_1_kuard_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - kuard.doso01.cna.madd-sauer.cloud
    secretName: quickstart-example-tls
  rules:
  - host: kuard.doso01.cna.madd-sauer.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
